crates/musli/tests/ui/tag_content_on_enum_error.stderr
error: In #[musli(Binary | Text, ..)] the #[musli(tag)] attribute is only supported on enums
 --> tests/ui/tag_content_on_enum_error.rs:4:9
  |
4 | #[musli(tag = "type")]
  |         ^^^

error: In #[musli(Binary | Text, ..)] the #[musli(content)] attribute is only supported on enums
 --> tests/ui/tag_content_on_enum_error.rs:8:9
  |
8 | #[musli(content = "type")]
  |         ^^^^^^^
